hphp/hack/test/fanout/switch.php.incr_old_decl.exp
=== base errors ===
No errors!
=== changed errors ===
b.php:3:11,12: `switch` statement nonexhaustive; the following cases are missing: `C` (Typing[4019])
  a.php:2:6,6: Enum declared here
=== fanout ===
Fun foo
Type E
